# executive-summary-generation

./: .env  main.py  pyproject.toml  requirements.txt
tests/: test_main.py
