[project]
name = "mhesipoll"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "genai>=2.1.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "protobuf>=6.30.2",
    "python-multipart==0.0.20",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.1",
]
